Add view one order API endpoint
